--- a/.gitignore
+++ b/.gitignore
@@ -266,6 +266,10 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 android/.idea/
 
+#### JetBrains ####
+.idea/
+cmake-build-relwithdebinfo/
+
 #### Visual Studio Code ####
 .vscode/*
 #!.vscode/settings.json
